--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "dist",
         "**/*.md"
     ],
-    "authors": [
+    "contributors": [
         "Martynas Žilinskas <martynas@quatrodev.com> (https://github.com/MartynasZilinskas)",
         "Dovydas Navickas <dovydas@quatrodev.com> (https://github.com/DovydasNavickas)"
     ],
@@ -22,6 +22,9 @@
         "@types/react": "^16.8.10",
         "react": "^16.8.6",
         "typescript": "^3.3.4000"
+    },
+    "peerDependencies": {
+        "react": "^16.8.6"
     },
     "dependencies": {}
 }
